lab8/.metadata/.plugins/org.eclipse.cdt.ui/usb_kb.build.log
21:06:19 **** Incremental Build of configuration Nios II for project usb_kb ****
make all 
Info: Building ../usb_kb_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../usb_kb_bsp/
[BSP build complete]
Info: Compiling io_handler.c to obj/default/io_handler.o
nios2-elf-gcc -xc -MP -MMD -c -I../usb_kb_bsp//HAL/inc -I../usb_kb_bsp/ -I../usb_kb_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/io_handler.o io_handler.c
io_handler.c: In function 'IO_read':
io_handler.c:56:2: error: invalid operands to binary * (have 'int' and 'volatile char *')
  *otg_hpi_r = 1;
  ^
make: *** [obj/default/io_handler.o] Error 1

21:06:22 Build Finished (took 2s.917ms)

